fix my work section mobile style

--- a/src/Components/MyWork/MyWork.module.css
+++ b/src/Components/MyWork/MyWork.module.css
@@ -17,3 +17,9 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+@media (max-width: 900px) {
+  .myWork {
+    padding: 1rem;
+  }
+}
