--- a/src/Components/ProjectTile/ProjectTile.module.css
+++ b/src/Components/ProjectTile/ProjectTile.module.css
@@ -3,6 +3,11 @@
   margin: 20px;
   position: relative;
 }
+.projectTile a {
+  width: 100%;
+  height: 100%;
+}
+
 .projectTile img {
   width: 100%;
   height: 100%;
@@ -31,4 +36,10 @@
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   transition: all 0.1s;
+}
+
+@media (max-width: 900px) {
+  .projectTile {
+    flex: 0 95%;
+  }
 }
